--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.6.0",
+    "react-native-vector-icons": "^8.1.0",
     "styled-components": "^5.3.1",
     "swr": "^1.0.0"
   },
